--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,19 +1,23 @@
 #Port
 server:
   port: 8091
+
 debug: true
+
 spring:
   #Monogo DB connection
   data:
     mongodb:
       database: sample_mflix
       uri: mongodb+srv://m220student:m220password@m220.dp7vh.mongodb.net/sample_mflix?retryWrites=true&w=majority
+  # Rabbit MQ connection
   rabbitmq:
     port: 5672
     listener:
       simple:
         acknowledge-mode: manual
 
+#2 layering-cache config
 layering-cache:
   redis:
     host: localhost
